fix: remove lovable-tagger dependency and clean up config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veltron-ai-website",
+  "name": "techforward-tech-site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
